--- a/src/app/makaledetay/makaledetay.component.html
+++ b/src/app/makaledetay/makaledetay.component.html
@@ -42,17 +42,17 @@
              <div class="row">
                  <div class="col-md-6">
                       <div class="s-content__prev mb-30">
-                          <a href="#0" rel="prev">
-                              <span>Previous Post</span>
-                               Farmers plead for bullets to put down emaciated stock
+                          <a [routerLink]="['/yayinlar', prevNextMakaleler[4].id, prevNextMakaleler[4].makale_slug]" rel="prev">
+                              <span>ÖNCEKİ YAYIN</span>
+                               {{prevNextMakaleler[4].makale_baslik}}
                           </a>
                       </div>
                  </div>
                  <div class="col-md-6">
-                      <div class="s-content__next mb-30 text-left text-md-right">
-                          <a href="#0" rel="next">
-                              <span>Next Post</span>
-                               Nahan downplays Liberal lership tensions after white ant
+                      <div *ngIf="prevNextMakaleler.length > 0" class="s-content__next mb-30 text-left text-md-right">
+                          <a [routerLink]="['/yayinlar', prevNextMakaleler[5].id, prevNextMakaleler[5].makale_slug]" rel="next">
+                              <span>SONRAKİ YAYIN</span>
+                               {{prevNextMakaleler[5].makale_baslik}}
                           </a>
                       </div>
                  </div>
@@ -66,11 +66,13 @@
               <h2>You may also like</h2>
           </div>
           <div class="row">
-              <div class="col-lg-4 col-md-4">
+
+            <ng-container *ngFor="let prevNext of prevNextMakaleler; let iPrevNext = index;">
+              <div *ngIf="iPrevNext < 3" class="col-lg-4 col-md-4">
                   <div class="postbox mb-30">
                       <div class="postbox__thumb">
                           <a href="#">
-                              <img class="img-100" src="assets/img/trendy/sm1.jpg" alt="hero image">
+                              <img class="img-100" src="{{ environment.apiEndpoint + 'media/' + prevNext.image240x160 }}" alt="hero image">
                           </a>
                       </div>
                       <div class="postbox__text pt-10">
@@ -78,72 +80,19 @@
                               <ul>
                                   <li>
                                       <i class="fas fa-calendar-alt"></i>
-                                      <span>01 Sep 2018</span>
+                                      <span>{{ prevNext.makale_baslik }}</span>
                                   </li>
-                                  <li>
-                                      <i class="far fa-comment"></i>
-                                      <span>(03)</span>
-                                  </li>
+
                               </ul>
                           </div>
                           <h4 class="pr-0">
-                              <a href="#">Paul Manafort’s Accountant Testifies She Helped Alter Financial</a>
+                              <a [routerLink]="['/yayinlar', prevNext && prevNext.id, prevNext && prevNext.makale_slug]">{{ prevNext.makale_baslik }}</a>
                           </h4>
                       </div>
                   </div>
               </div>
-              <div class="col-lg-4 col-md-4">
-                  <div class="postbox mb-30">
-                      <div class="postbox__thumb">
-                          <a href="#">
-                              <img class="img-100" src="assets/img/trendy/sm2.jpg" alt="hero image">
-                          </a>
-                      </div>
-                      <div class="postbox__text pt-10">
-                          <div class="postbox__text-meta pb-10">
-                              <ul>
-                                  <li>
-                                      <i class="fas fa-calendar-alt"></i>
-                                      <span>01 Sep 2018</span>
-                                  </li>
-                                  <li>
-                                      <i class="far fa-comment"></i>
-                                      <span>(03)</span>
-                                  </li>
-                              </ul>
-                          </div>
-                          <h4 class="pr-0">
-                              <a href="#">Paul Manafort’s Accountant Testifies She Helped Alter Financial</a>
-                          </h4>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-lg-4 col-md-4">
-                  <div class="postbox mb-30">
-                      <div class="postbox__thumb">
-                          <a href="#">
-                              <img class="img-100" src="assets/img/trendy/sm3.jpg" alt="hero image">
-                          </a>
-                      </div>
-                      <div class="postbox__text pt-10">
-                          <div class="postbox__text-meta pb-10">
-                              <ul>
-                                  <li>
-                                      <i class="fas fa-calendar-alt"></i>
-                                      <span>01 Sep 2018</span>
-                                  </li>
-                                  <li>
-                                      <i class="far fa-comment"></i>
-                                      <span>(03)</span>
-                                  </li>
-                              </ul>
-                          </div>
-                          <h4 class="pr-0">
-                              <a href="#">Paul Manafort’s Accountant Testifies She Helped Alter Financial</a>
-                          </h4>
-                      </div>
-                  </div>
-              </div>
+            </ng-container>
+
           </div>
       </div>
   </div>
