--- a/src/app/makalelerpage/makalelerpage.component.html
+++ b/src/app/makalelerpage/makalelerpage.component.html
@@ -49,14 +49,13 @@
                 </div>
 
                 <div class="widget widget-border mb-40">
-                    <h3 class="widget-title">Categories</h3>
+                    <h3 class="widget-title">Ceza Kategorileri</h3>
                     <ul>
-                        <li><a href="#">Business </a></li>
-                        <li><a href="#">Politic </a></li>
-                        <li><a href="#">Fashion </a></li>
-                        <li><a href="#">Corporate </a></li>
-                        <li><a href="#">Football </a></li>
-                        <li><a href="#">Magazine </a></li>
+                        <li><a routerLink="/yayinlar/hakaret/sayfa/1">Hakaret </a></li>
+                        <li><a routerLink="/yayinlar/yaralama/sayfa/1">Yaralama </a></li>
+                        <li><a routerLink="/yayinlar/orgutsuclari/sayfa/1">Örgüt Suçları </a></li>
+                        <li><a routerLink="/yayinlar/uyusturucumaddesuclari/sayfa/1">Uyuşturucu Madde Suçları </a></li>
+                        <li><a routerLink="/yayinlar/beyazyakalisuclari/sayfa/1">Beyaz Yakalı Suçları </a></li>
                     </ul>
                 </div>
 
